# midi-captain-max

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  requirements-smoke.txt
.github/actions/patch-config-editor-version/: action.yml
.github/workflows/: ci.yml  release.yml
config-editor/: package.json
config-editor/src-tauri/: Cargo.toml  tauri.conf.json
config-editor/src-tauri/src/: commands.rs  config.rs  device.rs  lib.rs
config-editor/src/lib/: api.ts  formStore.ts  types.ts  validation.ts
config-editor/src/routes/: +page.svelte
docs/: hardware-reference.md  usb-disable-bug-fix.md  windows-build.md
docs/plans/: 2026-03-01-unified-message-types.md
emulator/: SPIKE-RESULTS.md  build-uf2.py  diagram-nano4.json  diagram.json  requirements.txt  run.sh  setup.sh  test-boot.yaml  test.sh  wokwi.toml
emulator/configs/: test-mini6.json  test-nano4.json  test-std10.json
firmware/dev/: INSTALL.md  boot.py  code.py  config-duo2.json  config-example-all-types.json  config-example-channel.json  config-mini6.json  config-nano4.json  config-one1.json  config-test-off-mode.json  config.json
firmware/dev/core/: button.py  config.py
firmware/dev/devices/: duo2.py  nano4.py  one1.py
firmware/dev/experiments/: duo2_dip_probe.py  duo2_display_probe.py  duo2_display_scan.py  duo2_display_test.py  duo2_led_probe.py  duo2_oem_inspect.py  duo2_probe.py  nano4_display_probe.py  nano4_led_probe.py  (+4 more)
tests/: conftest.py  test_button_state.py  test_config.py  test_usb_drive_name.py
tools/: build-gumroad-zip.sh  deploy.ps1  deploy.sh  release_notes.md
(+6 files in other folders)
