[package]
name = "config-editor"
version = "0.1.0"
description = "Configuration editor for MIDI Captain foot controllers"
authors = ["Maximilian Cascone <max@mcmusicworkshop.com>"]
edition = "2021"
license = "Proprietary"
homepage = "https://github.com/mcascone/midi-captain-max"
repository = "https://github.com/mcascone/midi-captain-max"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "config_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "winnt", "minwindef"] }

[dev-dependencies]
tempfile = "3"

